--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-react-router": "^2.1.2",
     "@react-router/dev": "^7.11.0",
     "@types/node": "22",
     "@types/react": "^19.2.7",
