feat: Chuyển sang vercel

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # Required scopes: read:user
 GITHUB_TOKEN=your_github_token_here
 
+# Web3Forms Access Key
+# Sign up at: https://web3forms.com
+# Enter your email to receive access key
+VITE_WEB3FORMS_ACCESS_KEY=your_access_key_here
+
 R2_ACCOUNT_ID=
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
