docs: update wrangler.toml comments

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,8 +3,9 @@ compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "build/client"
 
-# Environment variables - these will be available in context.env
-# For sensitive values, use Cloudflare Dashboard Secrets instead
+# Environment variables - IMPORTANT: Set actual values in Cloudflare Dashboard
+# These are just placeholders to tell Cloudflare which vars to inject
+# Go to: Dashboard > Workers & Pages > portfolio > Settings > Variables and Secrets
 [vars]
-# Placeholder - actual value should be set in Cloudflare Dashboard as Secret
-# GITHUB_TOKEN = "your_token_here"
+# Placeholder - actual value must be set as Secret in Cloudflare Dashboard
+# GITHUB_TOKEN will be injected from Dashboard at runtime
