feat: Add R2 CDN support for spotlight frames
- Update .env.example with detailed R2 configuration docs
- Add env parameter to getR2PublicUrl() to support Cloudflare context
- Update root.tsx loader to pass cloudflare.env (consistent with GITHUB_TOKEN pattern)
- Fix missing spotlight frames by enabling R2 CDN fallback
- Type-safe context handling in all loaders

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,52 @@
-# GitHub Personal Access Token
+# ============================================
+# GITHUB API CONFIGURATION
+# ============================================
+# GitHub Personal Access Token for fetching repository data
 # Create one at: https://github.com/settings/tokens
-# Required scopes: read:user
+# Required scopes: read:user, repo (for contribution data)
+# Used in: app/services/github-projects.server.ts, app/services/github.server.ts
 GITHUB_TOKEN=your_github_token_here
 
-# Web3Forms Access Key
+# ============================================
+# WEB3FORMS CONFIGURATION (Contact Form)
+# ============================================
+# Web3Forms Access Key for contact form submissions
 # Sign up at: https://web3forms.com
 # Enter your email to receive access key
+# Used in: app/hooks/use-contact-form.ts
 VITE_WEB3FORMS_ACCESS_KEY=your_access_key_here
 
-R2_ACCOUNT_ID=
-R2_ACCESS_KEY_ID=
-R2_SECRET_ACCESS_KEY=
+# ============================================
+# CLOUDFLARE R2 CONFIGURATION (CDN for Images)
+# ============================================
+# Cloudflare R2 credentials for image hosting
+# Get from: Cloudflare Dashboard > R2 > Manage R2 API Tokens
+# Used in: app/config/cdn.ts for spotlight frames and project images
+
+# R2 Account ID (found in Cloudflare Dashboard)
+R2_ACCOUNT_ID=your_account_id_here
+
+# R2 Access Key ID (create from R2 API Tokens)
+R2_ACCESS_KEY_ID=your_access_key_id_here
+
+# R2 Secret Access Key (shown once when creating API token)
+R2_SECRET_ACCESS_KEY=your_secret_access_key_here
+
+# R2 Bucket Name (create bucket in R2 dashboard)
 R2_BUCKET_NAME=portfolio-images
+
+# R2 Public URL (custom domain or R2.dev URL)
+# Example: https://cdn.yourdomain.com or https://pub-xxxxx.r2.dev
+# Leave empty to use local public folder as fallback
+# IMPORTANT: Upload 272 spotlight frames to /spotlight/ folder in R2 bucket
+# Format: spotlight-frame-001.webp to spotlight-frame-272.webp
 R2_PUBLIC_URL=
 
-# Contact Form Rate Limiting
+# ============================================
+# CONTACT FORM RATE LIMITING
+# ============================================
+# Maximum number of form submissions allowed within the time window
 VITE_CONTACT_FORM_MAX_SUBMISSIONS=3
+
+# Time window for rate limiting in milliseconds (60000 = 1 minute)
 VITE_CONTACT_FORM_RATE_LIMIT_WINDOW=60000
